--- a/modules/tensor_mechanics/doc/content/bib/tensor_mechanics.bib
+++ b/modules/tensor_mechanics/doc/content/bib/tensor_mechanics.bib
@@ -1,3 +1,15 @@
+@Article{hales15homogenization,
+    author = "Hales, J. D. and Tonks, M. R. and Chockalingam, K. and Perez, D. M. and Novascone, S. R. and Spencer, B. W. and Williamson, R. L.",
+    title = "Asymptotic expansion homogenization for multiscale nuclear fuel analysis",
+    journal = "Computational Materials Science",
+    year = "2015",
+    volume = "99",
+    month = "March",
+    pages = "290--297",
+    doi = "10.1016/j.commatsci.2014.12.039",
+    url = "http://dx.doi.org/10.1016/j.commatsci.2014.12.039"
+}
+
 @book{simo2006computational,
   title={Computational inelasticity},
   author={Simo, Juan C and Hughes, Thomas JR},
@@ -17,7 +29,7 @@
   Author = {Niffenegger, Markus and Reichlin, Klaus},
   Doi = {10.1016/j.nucengdes.2011.12.006},
   Journal = {Nuclear Engineering and Design},
-  Month = {February},
+  Month = feb,
   Pages = {356--359},
   Title = {The proper use of thermal expansion coefficients in finite element calculations},
   Volume = {243},
@@ -93,7 +105,7 @@
   Pages = {379},
   Title = {A Path Independent Integral and the Approximate Analysis of Strain Concentration by Notches and Cracks},
   Volume = {35},
-  Year = {1968}
+  Year = {1968},
 }
 
 @article{li_comparison_1985,
@@ -104,7 +116,7 @@
   Pages = {405--421},
   Title = {A comparison of methods for calculating energy release rates},
   Volume = {21},
-  Year = {1985}
+  Year = {1985},
 }
 
 @techreport{warp3d_17.3.1,
@@ -112,7 +124,7 @@
   Institution = {University of Illinois at Urbana-Champaign},
   Number = {UILU-ENG-95-2012},
   Title = {WARP3D-Release 17.3.1},
-  Year = {2012}
+  Year = {2012},
 }
 
 @article{walters_interaction_2005,
@@ -234,7 +246,8 @@
   number = {2},
   pages = {152-164},
   year = {1967},
-  doi = {10.1177/002199836700100205}
+  doi = {10.1177/002199836700100205},
+  url = {https://doi.org/10.1177/002199836700100205}
 }
 
 @article{Adams1984gps,
@@ -246,7 +259,8 @@
   pages = {1153-1165},
   year = {1984},
   issn = {0045-7949},
-  doi = {https://doi.org/10.1016/0045-7949(84)90160-3}
+  doi = {https://doi.org/10.1016/0045-7949(84)90160-3},
+  url = {http://www.sciencedirect.com/science/article/pii/0045794984901603}
 }
 
 @article{Li1999gps,
@@ -258,7 +272,8 @@
   pages = {815-838},
   year = {1999},
   issn = {1364-5021},
-  doi = {10.1098/rspa.1999.0336}
+  doi = {10.1098/rspa.1999.0336},
+  url = {http://rspa.royalsocietypublishing.org/content/455/1983/815}
 }
 
 @manual{Abaqus2014gps,
@@ -276,7 +291,8 @@
   pages = {353-365},
   year = {2005},
   issn = {1359-835X},
-  doi = {https://doi.org/10.1016/j.compositesa.2004.06.036}
+  doi = {https://doi.org/10.1016/j.compositesa.2004.06.036},
+  url = {http://www.sciencedirect.com/science/article/pii/S1359835X04001885}
 }
 
 @article{simo1985cto,
@@ -307,19 +323,21 @@
 @article{kim_phase-field_1999,
   title = {Phase-field model for binary alloys},
   volume = {60},
+  url = {http://link.aps.org/doi/10.1103/PhysRevE.60.7186},
   doi = {10.1103/PhysRevE.60.7186},
   number = {6},
   urldate = {2014-03-31},
   journal = {Physical Review E},
   author = {Kim, Seong Gyoon and Kim, Won Tae and Suzuki, Toshio},
-  month = {December},
+  month = dec,
   year = {1999},
-  pages = {7186-7197}
+  pages = {7186-7197},
 }
 
 @article{Levitas2011,
   Author = {Levitas, V. I. and Samani, K.},
   Journal = {Nature Communications},
+  url = {https://www.nature.com/articles/ncomms1275},
   doi = {10.1038/ncomms1275},
   Title = {Size and mechanics effects in surface-induced melting of nanoparticles},
   Volume = {2},
@@ -344,7 +362,8 @@ pages = "449 - 485",
 year = "2015",
 issn = "0045-7825",
 doi = "https://doi.org/10.1016/j.cma.2014.11.016",
-author = "Christian Miehe and Lisa-Marie Sch{\"a}nzel and Heike Ulmer"
+url = "http://www.sciencedirect.com/science/article/pii/S0045782514004423",
+author = "Christian Miehe and Lisa-Marie Sch{\"a}nzel and Heike Ulmer",
 }
 
 @article{JYWu2017,
@@ -355,14 +374,15 @@ pages = "72 - 99",
 year = "2017",
 issn = "0022-5096",
 doi = "https://doi.org/10.1016/j.jmps.2017.03.015",
-author = "Jian-Ying Wu"
+url = "http://www.sciencedirect.com/science/article/pii/S0022509616308341",
+author = "Jian-Ying Wu",
 }
 
 @article{strack_aleatory_2015,
   Author = {Strack, O.E. and Leavy, R.B. and Brannon, R.M.},
   Journal = {International Journal for Numerical Methods in Engineering},
   Doi = {10.1002/nme.4699},
-  Month = {April},
+  Month = apr,
   Number = {3-4},
   Pages = {468--495},
   Title = {Aleatory uncertainty and scale effects in computational damage models for failure and fragmentation},
@@ -381,83 +401,24 @@ author = "Jian-Ying Wu"
   publisher={Elsevier}
 }
 
-@article{Bishop:1951fb,
-  author = {Bishop, J F W and Hill, R},
-  title = {{A theory of the plastic distortion of a polycrystalline aggregate under combined stresses.}},
-  journal = {The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
-  year = {1951},
-  volume = {42},
-  number = {327},
-  pages = {414--427}
+@article{Askes2015,
+  title={The effects of element shape on the critical time step in explicit time integrators for elasto-dynamics},
+  author={Askes, Harm and Rodriguez-Ferran, Antonio and Hetherington, Jack},
+  journal={International Journal for Numerical Methods in Engineering},
+  volume={101},
+  number={11},
+  pages={809--824},
+  year={2015},
+  publisher={Wiley}
 }
 
-@article{Gurson:1977gg,
-  author = {Gurson, A L},
-  title = {{Continuum Theory of Ductile Rupture by Void Nucleation and Growth: Part I{\textemdash}Yield Criteria and Flow Rules for Porous Ductile Media}},
-  journal = {Journal of Engineering Materials and Technology},
-  year = {1977},
-  volume = {99},
-  number = {1},
-  pages = {2--63}
-}
-
-@article{Rice:1969ky,
-  author = {Rice, J R and Tracey, D M},
-  title = {{On the ductile enlargement of voids in triaxial stress fields}},
-  journal = {Journal of the Mechanics and Physics of Solids},
-  year = {1969},
-  volume = {17},
-  number = {3},
-  pages = {201--217}
-}
-
-@article{Tvergaard:1984ip,
-  author = {Tvergaard, V and Needleman, A},
-  title = {{Analysis of the cup-cone fracture in a round tensile bar}},
-  journal = {Acta Metallurgica},
-  year = {1984},
-  volume = {32},
-  number = {1},
-  pages = {157--169}
-}
-
-@article{Leblond:1994kl,
-  author = {Leblond, J B and Perrin, G and Suquet, P},
-  title = {{Exact results and approximate models for porous viscoplastic solids}},
-  journal = {International Journal of Plasticity},
-  year = {1994},
-  volume = {10},
-  number = {3},
-  pages = {213--235},
-  month = {January}
-}
-
-@article{Needleman:1980db,
-  author = {Needleman, A and Rice, J R},
-  title = {{Plastic creep flow effects in the diffusive cavitation of grain boundaries}},
-  journal = {Acta Metallurgica},
-  year = {1980},
-  volume = {28},
-  number = {10},
-  pages = {1315--1332},
-  month = {October}
-}
-
-@article{Wojtacki:2018dv,
-  author = {Wojtacki, Kajetan and Vincent, Pierre-Guy and Suquet, Pierre and Moulinec, Herv{\'e} and Boittin, Guylaine},
-  title = {{A micromechanical model for the secondary creep of elasto-viscoplastic porous materials with two rate-sensitivity exponents: Application to a mixed oxide fuel}},
-  year = {2019},
-  pages = {1--15},
-month = {January}
-}
-
-@article{hales15homogenization,
-  author = {Hales, J. D. and Tonks, M. R. and Chockalingam, K. and Perez, D. M. and Novascone, S. R. and Spencer, B. W. and Williamson, R. L.},
-  title = {Asymptotic expansion homogenization for multiscale nuclear fuel analysis},
-  journal = {Computational Materials Science},
-  year = {2015},
-  volume = {99},
-  month = {March},
-  pages = {290--297},
-  doi = {10.1016/j.commatsci.2014.12.039}
+@article{Krieg1973,
+  title={On the behavior of a numerical approximation to the rotatory inertia and transverse shear plate},
+  author={Krieg, RD},
+  journal={Journal of Applied Mechanics},
+  volume={40},
+  number={4},
+  pages={977--992},
+  year={1973},
+  publisher={ASME}
 }
